@@ -105,8 +105,10 @@
     <section name="*" attribute="contenttypes" type="contenttypes"
        required="no" />
        
-    <key name="max_size" attribute="max_size" datatype="byte-size-in-mb"
+    <key name="max_file_size" attribute="max_file_size" datatype="byte-size-in-mb"
          default="0" required="no" />
+    <key name="max_image_dimension" attribute="max_image_dimension"
+         datatype="image-dimension-or-no" default="no" required="no" />
     <key name="allow_document_upload" attribute="allow_document_upload"
          datatype="boolean" default="yes" required="no" /> 
     
